# routes/api.php
@@ -12,5 +12,7 @@ Route::prefix('v1')->group(function () {
     Route::middleware('auth:sanctum')->post('/logout', [AuthController::class, 'logout']);
     Route::middleware('auth:sanctum')->post('/close-other-sessions', [AuthController::class, 'closeOtherSessions']);
     Route::middleware('auth:sanctum')->post('/change-password', [AuthController::class, 'changePassword']);
+    Route::middleware('auth:sanctum')->post('/enable2FA', [AuthController::class, 'enable2FA']);
+    Route::middleware('auth:sanctum')->post('/verify2FA', [AuthController::class, 'verify2FA']);
     Route::middleware('auth:sanctum')->get('/profile', [AuthController::class, 'profile']);
 });
